# domain-transform

./: .gitignore  CMakeLists.txt
docs/: .gitignore  DomainTransform.tex
performance_tool/: benchmark.py  compile.py  git.py  main.py
plot_tool/: main.py
reference_images_paper/: readme.md
report/: .gitignore  0_abstract.tex  1_introduction.tex  2_background.tex  3_method.tex  4_results.tex  5_conclusions.tex  bibl_conf.bib  report.tex
report/figures/: roofline.ai
src/: DomainTransform.pro  Exception.h  FunctionProfiling.h  Image.h  Mat2.h  NC.h  RF.h  common.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  types.h
validation_tool/: main.py  tester.py
